--- a/man-united-product-page.html
+++ b/man-united-product-page.html
@@ -9,8 +9,29 @@
 </head>
 <body>
 <div class="gridcontainer2">
-<div class="productimg1"><img src="images/man u 2008 shirt.png" alt="manchester united">  </div> 
-<div class="buttonmenu"><h1>Manchester United 07/08</h1><h3>399kr</h3><button  type="button" onclick="alert('Tillagd i varukorg!')"><h2>Lägg till i varukorg</h2></button></div>
+    <div class="navbar">
+        <img src="images/webshoplogo.png" alt="logo" class="logo">
+        <a href="index.html" class="navlink3">Hem</a> 
+        <a href="produkter.html" class="navlink1">Produkter</a> 
+        <a href="kontakt.html" class="navlink2">Kontakta oss</a>
+       
+        <button class="varukorg"><img src="images/shopping-cart.png" alt="a" class="cart"></button>
+    </div>
+
+
+    <div class="productimg1"><img src="images/man u 2008 shirt.png" alt="manchester united">  </div> 
+<div class="buttonmenu"><h1>Manchester United 07/08</h1><h3>399kr</h3> 
+   
+    <button  type="button" onclick="alert('Tillagd i varukorg!')"><h2>Lägg till i varukorg</h2></button>
+</div>
+<div class="packer">
+    <button class="productsize">XS</button>
+    <button class="productsize">S</button>
+    <button class="productsize">M</button>
+    <button class="productsize">L</button>
+    <button class="productsize">XL</button>
+    <button class="productsize">12XL</button></div> 
+
 <div class="menutext"><pre><p>     <b><h3>Manchester United 2007/2008 Homekit</h3></b>
 
 
