--- a/man-united-product-page.html
+++ b/man-united-product-page.html
@@ -30,7 +30,7 @@
     <button class="productsize">M</button>
     <button class="productsize">L</button>
     <button class="productsize">XL</button>
-    <button class="productsize">12XL</button></div> 
+   </div> 
 
 <div class="menutext"><pre><p>     <b><h3>Manchester United 2007/2008 Homekit</h3></b>
 
