--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="gridcontainer">
         <div class="navbar">
             <img src="images/webshoplogo.png" alt="logo" class="logo">
-            
-            <a href="produkter.html" class="navlink1">Produkter</a> 
-            <a href="kontakt.html" class="navlink2">Kontakta oss</a>
+            <a href="index.html" class="navlink1">Hem</a> 
+            <a href="produkter.html" class="navlink2">Produkter</a> 
+            <a href="kontakt.html" class="navlink3">Kontakta oss</a>
            
-            <button class="varukorg"><img src="images/shopping-cart.png" alt="a" class="cart"></button>
+        <a href="cart.html"><button class="varukorg"><img src="images/shopping-cart.png" alt="a" class="cart"></button></a> 
         </div>
          <div class="rubrik"><h1>PitchWear</h1></div>
          <div class="Urubrik"><h1>Populärt just nu</h1> <hr></div>
