--- a/produkter.html
+++ b/produkter.html
@@ -9,7 +9,15 @@
 </head>
 <body class="bodyp">
  <div class="gridcontainer2">
-<div class="produkth1"><h1>Produkter</h1> </div> 
+    <div class="navbar">
+        <img src="images/webshoplogo.png" alt="logo" class="logo">
+        <a href="index.html" class="navlink1">Hem</a> 
+        <a href="produkter.html" class="navlink2">Produkter</a> 
+        <a href="kontakt.html" class="navlink3">Kontakta oss</a>
+       
+     <a href="cart.html"><button class="varukorg"><img src="images/shopping-cart.png" alt="a" class="cart"></button>
+     </a>  </div>
+    <div class="produkth1"><h1>Produkter</h1> </div> 
 <div class="img5"><img src="images/byern munchen.jpg" alt="bm"></div>
 <h2 class="imgtxt5">Bayern Munchen</h2>
 <button class="button5">Köp</button>
