--- a/produkter.html
+++ b/produkter.html
@@ -15,8 +15,8 @@
         <a href="produkter.html" class="navlink2">Produkter</a> 
         <a href="kontakt.html" class="navlink3">Kontakta oss</a>
        
-     <a href="cart.html"><button class="varukorg"><img src="images/shopping-cart.png" alt="a" class="cart"></button>
-     </a>  </div>
+    <a href="cart.html"><button class="varukorg"><img src="images/shopping-cart.png" alt="a" class="cart"></button></a> 
+    </div>
     <div class="produkth1"><h1>Produkter</h1> </div> 
 <div class="img5"><img src="images/byern munchen.jpg" alt="bm"></div>
 <h2 class="imgtxt5">Bayern Munchen</h2>
