--- a/cart.html
+++ b/cart.html
@@ -13,10 +13,12 @@
     <a href="produkter.html" class="navlink2">Produkter</a> 
     <a href="kontakt.html" class="navlink3">Kontakta oss</a>
   </div>
-<div class="cart-items"></div>
+<div class="cart-items">
+<h2>Dina varor:</h2>
+<hr>
 
-<div><img class="muller" src="images/mullerpng.png" alt="mullerpng"></div>
 
+</div>
 
 </div>
 </body>
