--- a/kontakt.html
+++ b/kontakt.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<link rel="stylesheet" href="css/kontakt.css">
 </head>
 <body>
-    
+  <div class="gridcontainer-kontakt"> 
+    <div class="navbar">
+        <img src="images/webshoplogo.png" alt="logo" class="logo">
+        <a href="index.html" class="navlink1">Hem</a> 
+        <a href="produkter.html" class="navlink2">Produkter</a> 
+        <a href="kontakt.html" class="navlink3">Kontakta oss</a>
+        <a href="cart.html"><button class="varukorg"><img src="images/shopping-cart.png" alt="a" class="cart"></button></a>
+    </div>
+    <div class="holder1">
+<h1>📱</h1>
+<hr>
+
+<table><tr>
+ <th>PitchWear HQ</th> 
+ <td>070-211-98-06</td></tr>
+ <tr> 
+ <th>Albin Ahlin (ägaren)</th>  
+ <td>079-457-32-11</td>
+</tr>
+</table>
+   </div> 
+   <div class="holder2">
+<h1>📧</h1>
+<hr>
+   </div> 
+   <div class="holder3">
+<h1>🏠</h1>
+<hr>
+   </div> 
+
+
+</div> 
 </body>
 </html>
