--- a/produkter.html
+++ b/produkter.html
@@ -20,22 +20,22 @@
     <div class="produkth1"><h1>Produkter</h1> </div> 
 <div class="img5"><img src="images/byern munchen.jpg" alt="bm"></div>
 <h2 class="imgtxt5">Bayern Munchen</h2>
-<button class="button5">Köp</button>
+<button type="button" onclick="alert('Tillagd i varukorg!')" class="button5">Köp</button>
 <div class="img6"><img src="images/psg.jpg" alt="psg"></div>
 <h2 class="imgtxt6">PSG</h2>
-<button class="button6">Köp</button>
+<button type="button" onclick="alert('Tillagd i varukorg!')" class="button6">Köp</button>
 <div class="img7"><img src="images/juve.jpg" alt="sp"></div>
 <h2 class="imgtxt7">Juventus</h2>
-<button class="button7">Köp</button>
+<button type="button" onclick="alert('Tillagd i varukorg!')" class="button7">Köp</button>
 <div class="img8"><img src="images/napoli.jpg" alt="bra"></div>
 <h2 class="imgtxt8">Napoli</h2>
-<button class="button8">Köp</button>
+<button type="button" onclick="alert('Tillagd i varukorg!')" class="button8">Köp</button>
 <div class="img9"><img src="images/marocco.jpg" alt="int"></div>
 <h2 class="imgtxt9">Marocko</h2>
-<button class="button9">Köp</button>
+<button type="button" onclick="alert('Tillagd i varukorg!')" class="button9">Köp</button>
 <div class="img10"><img src="images/citeh.jpg" alt="rm"></div>
 <h2 class="imgtxt10">Manchester City</h2>
-<button class="button10">Köp</button>
+<button type="button" onclick="alert('Tillagd i varukorg!')" class="button10">Köp</button>
 
  </div>   
 </body>
